--- a/components/ExplorerFiles/style.module.css
+++ b/components/ExplorerFiles/style.module.css
@@ -17,7 +17,7 @@
   flex-direction: column;
   gap: 2rem;
   padding: 1.25rem;
-  height: calc(100% - 10px);
+  height: 100%;
   overflow-y: auto;
   overflow-x: hidden;
   position: relative;
