--- a/components/IconButton/style.module.css
+++ b/components/IconButton/style.module.css
@@ -12,7 +12,7 @@
 }
 
 .iconButton:not(:disabled):hover {
-  background-color: var(--color-primary-4);
+  background-color: var(--color-primary-transparent);
 }
 
 .iconButton:disabled {
